# scitex-gists

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  dep-hygiene-smoke.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-gists-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: conf.py
examples/: quickstart.py
src/scitex_gists/: __init__.py
src/scitex_gists/_skills/: SKILL.md  sigmacro.md  sigmaplot-macros.md
src/scitex_gists/_skills/scitex-gists/: 01_installation.md  01_quick-start.md  02_python-api.md  02_quick-start.md  03_python-api.md  10_quick-start.md  11_python-api.md  SKILL.md
src/scitex_gists/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_gists/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree
src/scitex_gists/_sphinx_html/.doctrees/api/: scitex_gists.doctree
src/scitex_gists/_sphinx_html/_modules/: index.html
src/scitex_gists/_sphinx_html/_modules/scitex_gists/: _SigMacro_processFigure_S.html  _SigMacro_toBlue.html
src/scitex_gists/_sphinx_html/_sources/: index.rst.txt  installation.rst.txt
src/scitex_gists/_sphinx_html/_sources/api/: scitex_gists.rst.txt
src/scitex_gists/_sphinx_html/api/: scitex_gists.html
tests/: conftest.py  test__SigMacro_processFigure_S.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py  test_skills_quality.py
tests/scitex_gists/: test__SigMacro_processFigure_S.py  test__SigMacro_toBlue.py
