[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-gists"
version = "0.1.0"
description = "SigmaPlot macro conversion utilities for matplotlib"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-gists"
Repository = "https://github.com/ywatanabe1989/scitex-gists"
