[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-gists"
version = "0.1.5"
description = "SigmaPlot macro conversion utilities for matplotlib"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
dev = [
    "scitex-dev",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-gists[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-gists"
Repository = "https://github.com/ywatanabe1989/scitex-gists"
Issues = "https://github.com/ywatanabe1989/scitex-gists/issues"
Documentation = "https://scitex-gists.readthedocs.io"

[project.entry-points."scitex_dev.docs"]
scitex-gists = "scitex_gists"

[project.entry-points."scitex_dev.skills"]
scitex-gists = "scitex_gists"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_gists"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
